--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
+    <!-- <link rel="icon" href="http://domain and path/favicon.ico" type="image/ico" /> -->
+
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -41,6 +43,8 @@
         <li id="sat" class="daysToShow">SATURDAY</li>
         <li id="sun" class="daysToShow">SUNDAY</li>
     </div>
+
+    <!-- javascript -->
     <script src="logic.js"></script>
 </body>
 
