--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
-    <!-- <link rel="icon" href="http://domain and path/favicon.ico" type="image/ico" /> -->
+    <link rel="icon" href="css/favicon.ico" type="image/ico" />
 
 
     <link rel="stylesheet" href="css/style.css">
